--- a/index.html
+++ b/index.html
@@ -176,65 +176,75 @@
   <!-- voitures section -->
 
   <section class="team_section layout_padding">
-    <div class="container">
-      <div id="image-gallery">
-        <div class="row">
-          <div class="col-md-4 col-sm-6 mx-auto">
-            <div class="box">
-              <div class="img-box">
-                <img src="img/voiture/car-1.png" alt="" width="300" height="300">
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 mx-auto">
-            <div class="box">
-              <div class="img-box">
-                <img src="img/voiture/car-2.png" alt="" width="200" height="300">
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 mx-auto">
-            <div class="box">
-              <div class="img-box">
-                <img src="img/voiture/car-3.png" alt="" width="200" height="300">
-              </div>
-            </div>
-          </div>
-
-          <!-- Hidden images -->
-          <div class="col-md-4 col-sm-6 mx-auto hidden">
-            <div class="box">
-              <div class="img-box">
-                <img src="img/voiture/car-4.png" alt="" width="300" height="300">
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 mx-auto hidden">
-            <div class="box">
-              <div class="img-box">
-                <img src="img/voiture/car-5.png" alt="" width="200" height="300">
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 mx-auto hidden">
-            <div class="box">
-              <div class="img-box">
-                <img src="img/voiture/car-6.png" alt="" width="200" height="300">
-              </div>
-            </div>
-          </div>
-
-
-
-
+      <div class="container">
+        <div class="heading_container heading_center">
+          <h2>
+            Voitures
+          </h2>
+          <p>
+          Nous achetons tous les types de voitures, de bus et de cammionnettes.
+          </p>
         </div>
-      </div>
 
-      <!-- Button to toggle visibility -->
-      <div class="btn-box text-center mt-4">
-        <a href="#" id="toggleButton" class="btn btn-primary">Voir Plus</a>
-      </div>
+        <div class="container">
+          <div id="image-gallery">
+            <div class="row">
+              <div class="col-md-4 col-sm-6 mx-auto">
+                <div class="box">
+                  <div class="img-box">
+                    <img src="img/voiture/car-1.png" alt="" width="300" height="300">
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4 col-sm-6 mx-auto">
+                <div class="box">
+                  <div class="img-box">
+                    <img src="img/voiture/car-2.png" alt="" width="200" height="300">
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4 col-sm-6 mx-auto">
+                <div class="box">
+                  <div class="img-box">
+                    <img src="img/voiture/car-3.png" alt="" width="200" height="300">
+                  </div>
+                </div>
+              </div>
 
+              <!-- Hidden images -->
+              <div class="col-md-4 col-sm-6 mx-auto hidden">
+                <div class="box">
+                  <div class="img-box">
+                    <img src="img/voiture/car-4.png" alt="" width="300" height="300">
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4 col-sm-6 mx-auto hidden">
+                <div class="box">
+                  <div class="img-box">
+                    <img src="img/voiture/car-5.png" alt="" width="200" height="300">
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4 col-sm-6 mx-auto hidden">
+                <div class="box">
+                  <div class="img-box">
+                    <img src="img/voiture/car-6.png" alt="" width="200" height="300">
+                  </div>
+                </div>
+              </div>
+
+            </div>
+          </div>
+
+          <!-- Button to toggle visibility -->
+          <div class="btn-box text-center mt-4">
+            <a href="#" id="toggleButton" class="btn btn-primary">Voir Plus</a>
+          </div>
+
+       </div>
+
+     </div>
   </section>
 
   <!-- end voitures section -->
