change whatsapp link

--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
               </span>
             </a>
 
-            <a href="https://web.whatsapp.com/send?phone=+4179%20575%2005%2062" target="_blank" class="icon">
+            <a href="https://wa.me/41795750562" target="_blank" class="icon">
               <i class="fa fa-whatsapp"></i>
               <span>WhatsApp</span>
             </a>
@@ -217,7 +217,7 @@
               </span>
             </a>
 
-            <a href="https://web.whatsapp.com/send?phone=+4179%20575%2005%2062" target="_blank" class="icon">
+            <a href="https://wa.me/41795750562" target="_blank" class="icon">
               <i class="fa fa-whatsapp"></i>
               <span>WhatsApp</span>
             </a>
